generated/manifests/prod-axon/grafana/CiliumNetworkPolicy-allow-grafana-kube-apiserver-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-grafana-kube-apiserver-egress
  namespace: monitoring
spec:
  description: Allow the grafana dashboard sidecar to watch the kube-apiserver.
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
